--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
     line-height: 1.3;
     font-family: sans-serif;
     background-color: #d2d2d2;
-    transform: rotate(-0.5deg);
+    -webkit-font-smoothing: antialiased;
 }
 
 h2 {
