--- a/main.css
+++ b/main.css
@@ -3,20 +3,54 @@
     src: url(Roobert-Medium.woff2);
 }
 
+:root {
+    --fg: #000000;
+    --mid: #848484;
+    --dim: #d0d0d0;
+    --bg: #ffffff;
+}
+
+* {
+    font-weight: 500;
+    line-height: 105%;
+    margin: 0;
+}
+
 body {
-    max-width: 580px;
-    padding: 1em;
-    font-size: 16px;
+    padding: 0.5em 1em 2em 1em;
+    font-size: 20px;
     line-height: 1.3;
     font-family: Roobert, sans-serif;
-    background-color: #d2d2d2;
+    background-color: var(--bg);
     -webkit-font-smoothing: antialiased;
+    letter-spacing: -0.01em;
+    color: var(--fg);
+}
+
+header,
+footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+header > div {
+    font-size: 1.8em; 
+    max-width: 920px;
+    color: var(--mid);
+    margin-bottom: min(180px, 20vh);
+    letter-spacing: -0.02em;
+}
+
+h1 {
+    display: inline;
+    color: var(--fg);
+    font-size: inherit;
 }
 
 h2 {
     font-size: 1.1em;
     font-weight: normal;
-    margin-bottom: 0.2em;
+    margin-bottom: 0.7em;
 }
 
 ul, p {
@@ -25,11 +59,52 @@ ul, p {
 }
 
 ul {
-    padding-left: 1.4em;
+    padding-left: 0;
+    list-style-type: none;
+}
+
+ul.right {
+    text-align: right;
+}
+
+footer ul li,
+footer ul li a {
+    text-decoration: line-through;
+    color: var(--mid);
+}
+
+footer ul li:first-child {
+    text-decoration: unset;
+    color: unset;
 }
 
 a, a:link, a:active, a:visited {
-    color: #000;
-    font-size: 1.1em;
+    color: inherit;
     text-decoration: underline;
+    text-decoration-thickness: 0.07em;
+    text-decoration-color: var(--dim);
+}
+
+a:hover {
+    text-decoration-color: transparent;
+    background: -webkit-linear-gradient(#eee, #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+section {
+    margin-bottom: min(75px, 8vh);
+}
+
+.grey {
+    color: var(--mid);
+}
+
+.showcase {
+    width: calc(100%);
+    height: calc((100vw - 2em - 15px) / 2.3);
+    min-height: 400px;
+    border-radius: 36px;
+    background: radial-gradient(107.48% 115.12% at 64.5% 96.35%, rgba(113, 221, 255, 0.1449) 0%, rgba(113, 229, 255, 0) 100%), #F2F0EC;
+    overflow: hidden;
 }
