--- a/main.css
+++ b/main.css
@@ -8,32 +8,30 @@
     --mid: #848484;
     --dim: #d0d0d0;
     --bg: #ffffff;
+    --bp: 2em;
+    --gap: 4em;
+    --cute: #F2F0EC;
+    --cute-a: #f8f6f3;
 }
 
 * {
     font-weight: 500;
-    line-height: 105%;
+    line-height: 110%;
     margin: 0;
 }
 
 body {
-    padding: 1em;
+    padding: var(--bp);
+    padding-top: 10em;
     font-size: 20px;
-    line-height: 1.3;
     font-family: Roobert, sans-serif;
     background-color: var(--bg);
     -webkit-font-smoothing: antialiased;
     letter-spacing: -0.015em;
     color: var(--fg);
-    min-width: calc(375px - 1em - 1em);
-    max-width: 1800px;
+    min-width: calc(375px - var(--bp) * 2);
+    max-width: calc(1440px - var(--bp) * 2);
     margin: 0 auto;
-}
-
-body {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
 }
 
 main,
@@ -46,48 +44,25 @@ header {
     max-width: 920px;
     color: var(--mid);
     letter-spacing: -0.02em;
-    margin-bottom: 0.4em;
+    margin-bottom: 0.8em;
     flex-shrink: 2;
-    
-}
-
-nav {
-    position: sticky;
-    top: 1em;
-    width: 180px;
-    height: 180px;
-    border-radius: 50%;
-    border: 0.5px solid black;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transform: rotate(-15deg);
-    opacity: 0;
-    z-index: 10;
-    animation: wiggle cubic-bezier(.07,1.37,.26,.99) 1.8s 1 normal forwards;
-}
-
-@keyframes wiggle {
-    from {
-        transform: translateX(150%) rotate(160deg) ;
-    }
-    to {
-        transform: translateX(0%) rotate(-12deg) ;
-        opacity: 1;
-    }
 }
 
 nav ul {
+    display: flex;
     margin: 0;
+    gap: 6px;
 }
 
-nav li {
-    padding: 3px 0;
+nav li a {
+    display: block;
+    padding: 7px 14px;
+    background-color: var(--cute);
+    border-radius: 8px;
 }
 
 main {
-    margin-top: min(180px, 20vh);
+    margin-top: var(--gap);
 }
 
 h1 {
@@ -133,12 +108,21 @@ ul.right {
 
 a, a:hover, a:link, a:active, a:visited {
     color: inherit;
+}
+
+header a,
+footer a {
+    border-radius: 6px;
     text-decoration: underline;
     text-decoration-thickness: 1.5px;
     text-underline-offset: 0.1em;
 }
 
-a:hover {
+header a:hover,
+footer a:hover {
+    background-color: var(--cute);
+    outline: 3px solid var(--cute);
+    text-decoration: none;
     animation: 1.4s normal infinite colorwheel;
 }
 
@@ -163,7 +147,7 @@ nav a:hover {
 }
 
 section {
-    margin-bottom: min(75px, 8vh);
+    margin-bottom: var(--gap);
 }
 
 .grey {
@@ -171,17 +155,41 @@ section {
 }
 
 .showcase {
+    display: block;
     position: relative;
     width: calc(100%);
     height: 620px;
     border-radius: 36px;
-    background: radial-gradient(107.48% 115.12% at 64.5% 96.35%, rgba(113, 221, 255, 0.1449) 0%, rgba(113, 229, 255, 0) 100%), #F2F0EC;
+    background: #F2F0EC;
     overflow: clip;
+    transition: 0.5s ease;
+}
+
+.showcase:hover {
+    border-radius: 0px;
+    background: #f8f6f3;
+}
+
+.showcase:hover .whereto {
+    transform: translateY(0px);
 }
 
 .showcase * {
     position: absolute;
     transition: 1s ease;
+}
+
+.showcase .whereto {
+    text-decoration: none;
+    color: white;
+    background-color: black;
+    border-radius: 12px;
+    padding: 18px 25px;
+    text-align: center;
+    bottom: 40px;
+    right: 40px;
+    transform: translateY(120px);
+    transition: 0.5s ease;
 }
 
 .center-wrapper {
@@ -234,13 +242,13 @@ section {
 }
 
 .uploader-palmas {
-    left: -657px;
+    left: -670px;
     top: -107px;
     transform: translateY(160px);
 }
 
 .uploader-typewriter {
-    left: 296px;
+    left: 310px;
     top: -107px;
     transform: translateY(200px);
 }
@@ -248,6 +256,13 @@ section {
 .now {
     letter-spacing: 0.06em;
     font-size: 0.97em;
+}
+
+@media only screen and (min-width: 1440px)  {
+    body {
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
 }
 
 @media only screen and (max-width: 1160px)  {
@@ -269,19 +284,27 @@ section {
     nav li {
         padding: 6px 0;
     }
-
-    main {
-        margin-top: min(100px, 10vh);
-    }
 }
 
 @media only screen and (max-width: 920px)  {
+    :root {
+        --bp: 2em;
+    }
+
     .center-wrapper {
         transform: scale(0.8);
     }
 }
 
 @media only screen and (max-width: 740px)  {
+    :root {
+        --bp: 1em;
+    }
+
+    body {
+        font-size: 18px;
+    }
+
     .center-wrapper {
         transform: scale(0.7);
     }
